# game-of-life

./: CMakeLists.txt  README.md  game_of_life.c  game_of_life.h  gui.c  gui.h  main.c
src/: game_of_life.c  game_of_life.h  gui.c  gui.h  main.c
